--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <!-- Dies ist der Header. In header.component.html bearbeiten -->
     </app-header>
   </div>
-  <div>
+  <div id="content">
     Dies ist der Content.
   </div>
   <div>
