--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,8 @@
 <div id="header">
-    <img src="https://www.ost.ch/typo3conf/ext/template/Resources/Public/Images/logo-de.svg" alt="OST LOGO">  
-    <!-- Liste für Menu
-      <li id="list">
-        <ul><a href="https://www.ost.ch/de/">Home</a></ul>
-        <ul>Über Uns</ul>
-        <ul>Kontakt</ul>
-      </li> 
-    -->
+    <img id="ostlogo" src="https://www.ost.ch/typo3conf/ext/template/Resources/Public/Images/logo-de.svg" alt="OST LOGO">  
+
   </div>
   <div id="headerdiv">
 
   </div>
+  
