--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,7 @@
+/*
+Der Header ist nicht fixiert. Dies wurde kundenseitig gewünscht
+*/
+
 #header {
   width: 100%;
   border-bottom: 1px solid black;
