--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,10 @@
       <!-- Dies ist der Header. In header.component.html bearbeiten -->
     </app-header>
   </div>
-  <div id="content">
-    Dies ist der Content.
+  <div>
+    <app-content>
+      <!-- Dies ist der Content. In content.component.html bearbeiten-->
+    </app-content>
   </div>
   <div>
     <app-footer>
