--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
   <title>EasyChat</title>
 </head>
 <body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <div>
     <app-header>
       <!-- Dies ist der Header. In header.component.html bearbeiten -->
@@ -14,7 +16,8 @@
   </div>
   <div>
     <app-content>
-      <!-- Dies ist der Content. In content.component.html bearbeiten-->
+      
+      <!-- Dies ist der Content. In content.component.html bearbeiten -->
     </app-content>
   </div>
   <div>
@@ -24,3 +27,4 @@
   </div>
 </body>
 </html>
+
