--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -3,7 +3,7 @@
 
     <div>
       <p id="ausgabefeld" >{{ myText }}</p>
-      <textarea readonly id=""></textarea>
+      <!-- <textarea readonly id=""></textarea> -->
     </div>
 
     <div class="input-group">
