--- a/src/app/chat-bar/chat-bar.component.html
+++ b/src/app/chat-bar/chat-bar.component.html
@@ -1,15 +1,10 @@
 <div class="container" id="font">
-    <div id="grauerbereich">
-  
-        <div>
-            <p id="ausgabefeld" >{{ chatMessage }}</p>
-            <!-- <textarea readonly id=""></textarea> -->
-        </div>
-  
+    
+    
       <div class="input-group">
-        <textarea type="text" placeholder="Hier Text eingeben" [(ngModel)]="chatMessage" maxlength="99" id="eingabefeld" (keyup.enter)="showMessage()"></textarea>
-        <button type="button" id="meinbutton" (click)="showMessage()" [disabled]="!chatMessage">Absenden</button>
+        <textarea type="text" placeholder="Hier Text eingeben" [(ngModel)]="message" maxlength="99" id="eingabefeld" (keyup.enter)="sendMessage()"></textarea>
+        <button type="button" id="meinbutton" (click)="sendMessage()" [disabled]="!message">Absenden</button>
       </div>
   
-    </div>
+    
   </div>
