--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,22 +9,45 @@
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <div>
-    <app-header>
-      <!-- Dies ist der Header. In header.component.html bearbeiten -->
-    </app-header>
-  </div>
-  <div>
-    <app-chat-history >
-      <!-- Dies ist die chat-history. In chat-history.component.html bearbeiten -->
-    </app-chat-history>
+  
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <app-header>
+        <!-- Dies ist der Header. In header.component.html bearbeiten -->
+        </app-header>
+      </div>
 
-  </div>
-  <div>
-    <app-footer>
-      <!-- Dies ist der Footer. In footer.component.html bearbeiten -->
-    </app-footer>
-  </div>
+      <div class="col-xs-12 col-md-3">
+        <app-login>
+        <!-- Dies ist das Login. In login.component.html bearbeiten-->
+        </app-login>
+      </div>
+
+      <div class="col-xs-12 col-md-9">
+
+        <!--Div für Chat-History-->
+        <div class="col-xs-12">
+          <app-chat-history >
+          <!-- Dies ist die chat-history. In chat-history.component.html bearbeiten -->
+          </app-chat-history>
+        </div>
+
+        <!--Div für Chat-Bar-->  
+        <div class="col-xs-12">
+          hier soll chat-bar angezeigt werden
+        </div>
+      </div>
+
+      <div class="col-xs-12">
+        <app-footer>
+        <!-- Dies ist der Footer. In footer.component.html bearbeiten -->
+        </app-footer>
+      </div>
+
+    </div>
+  </div>  
+
 </body>
 </html>
 
