--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,6 +6,7 @@
 #font {
     font-family: Arial, Helvetica, sans-serif;
     border: 1px solid black;  /*kann wieder gelöscht werden */
+    margin-top: 20px;
 }
 
 /*muss noch angepasst werden */
@@ -24,7 +25,8 @@
     padding: 5px;
     border: 0px;
     border-radius: 5px;
-    background-color: #D72864;    
+    background-color: #D72864;
+    color: white; 
 }
 
 ::placeholder{
