--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,14 @@
-<div id="header">
-    <img id="ostlogo" src="https://www.ost.ch/typo3conf/ext/template/Resources/Public/Images/logo-de.svg" alt="OST LOGO">  
+<div class="container-fluid" id="header">
+  <div class="row">
+
+    <div class="col-xs-12" id="logo-row">
+      <img id="ostlogo" class="img.responsive" src="https://www.ost.ch/typo3conf/ext/template/Resources/Public/Images/logo-de.svg" alt="OST LOGO">  
+    </div>
+
+    <div class="col-xs-12" id="linien-row"></div>
 
   </div>
-  <div id="headerdiv">
+</div>
+  
 
-  </div>
   
