--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,21 +9,27 @@
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+
   
   <div class="container-fluid">
     <div class="row">
+
+      <!-- Div für Header -->
       <div class="col-xs-12">
         <app-header>
         <!-- Dies ist der Header. In header.component.html bearbeiten -->
         </app-header>
       </div>
 
+      <!-- Div für Login -->
       <div class="col-xs-12 col-md-3">
         <app-login (nicknameEvent)="loginUser($event)">
         <!-- Dies ist das Login. In login.component.html bearbeiten-->
         </app-login>
       </div>
 
+      <!-- Div für Conent-Bereich -->
       <div class="col-xs-12 col-md-9">
 
         <!--Div für Chat-History-->
@@ -41,6 +47,7 @@
         </div>
       </div>
 
+      <!-- Div für Footer -->
       <div class="col-xs-12">
         <app-footer>
         <!-- Dies ist der Footer. In footer.component.html bearbeiten -->
