--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,5 +1,5 @@
 #footerdiv {
-  background-color: #a0a0a0;
-  height: 120px;
-  border-top: 1px solid black;
+  background-color: #F2F2F2;
+  height: 20vh;
+  border-top: 0.2vh solid black;
 }
