--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,12 @@
   <div class="row">
 
     <div class="col-xs-12" id="logo-row">
-      <img id="ostlogo" class="img.responsive" src="https://www.ost.ch/typo3conf/ext/template/Resources/Public/Images/logo-de.svg" alt="OST LOGO">  
+      <img id="logo" class="img.responsive" src="https://simplysyte.ch/wp-content/uploads/2021/11/WhatsApp-Image-2021-11-13-at-14.38.42.jpeg" alt="LOGO">  
     </div>
 
-    <div class="col-xs-12" id="linien-row"></div>
+    <div class="col-xs-12" id="linie1-row"></div>
+    <div class="col-xs-12" id="linie2-row"></div>
+    <div class="col-xs-12" id="linie3-row"></div>
 
   </div>
 </div>
