--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -51,4 +51,11 @@
 
 #error-row{
     background-color: #f99b99;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#buttonBestätigen:disabled {
+    background-color: #9D726E;
 }
