--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,15 +22,15 @@
         </app-header>
       </div>
 
-      <!-- Div für Login -->
-      <div class="col-xs-12 col-md-3">
+      <!-- Div für Login - im kleinen Format ändert es die Position von links nach oben -->
+      <div class="col-xs-12 col-lg-3">
         <app-login (nicknameEvent)="loginUser($event)">
         <!-- Dies ist das Login. In login.component.html bearbeiten-->
         </app-login>
       </div>
 
-      <!-- Div für Conent-Bereich -->
-      <div class="col-xs-12 col-md-9">
+      <!-- Div für Conent-Bereich - im kleinen Format ändert es die Position auf die ganze Breite -->
+      <div class="col-xs-12 col-lg-9">
 
         <!--Div für Chat-History-->
         <div class="col-xs-12">
