--- a/src/app/chat-bar/chat-bar.component.css
+++ b/src/app/chat-bar/chat-bar.component.css
@@ -24,6 +24,7 @@
     border-radius: 5px;    
     background-color: #AA4942;
     color: white;
+    box-shadow: 0px 5px 20px #aa49422d;
 }
 
 ::placeholder {
@@ -36,6 +37,7 @@
     border-radius: 5px;
     background-color: #8F352D;
     color: white;
+    box-shadow: 0px 5px 20px #8f352d2d;
 }
 
 #meinbutton:disabled {
