--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -38,6 +38,7 @@
     border-radius: 5px;
     background-color: #AA4942;
     color: white;
+    box-shadow: 0px 5px 20px #aa49422d;
     /* overflow: hidden;
     text-overflow: ellipsis; */
 }
@@ -56,6 +57,7 @@
     border-radius: 5px;
     background-color: #8F352D;
     color: white;
+    box-shadow: 0px 5px 20px #aa49422d;
 }
 
 .error-row{
