--- a/src/app/chat-bar/chat-bar.component.html
+++ b/src/app/chat-bar/chat-bar.component.html
@@ -2,11 +2,11 @@
   <div class="row" id="inputrow">
 
     <div class="input-group">
+      <!-- Inputfeld, um Nachricht einzugeben -->
       <textarea type="text" placeholder="Hier Text eingeben" [(ngModel)]="message" maxlength="999" id="eingabefeld" (keyup.enter)="sendMessage()"></textarea>
+      <!-- Button, um Nachricht abzusenden -->
       <button type="button" id="meinbutton" (click)="sendMessage()" [disabled]="!message">Absenden</button>
     </div>
-
-
 
   </div>
 </div>
