--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
         </app-header>
       </div>
 
-      <!-- Div für Login -->
+      <!-- Div für Login hier gehört [sameUser]="sameUser" allenfalls rein-->
       <div class="col-xs-12 col-lg-3">
         <app-login (nicknameEvent)="loginUser($event)" [noUser]="noUser">
         <!-- Dies ist das Login. In login.component.html bearbeiten-->
