--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
             Bitte zuerst einen Nickname eingeben!
         </div>
 
-        <!-- Fehlermeldung noUser, wenn Nickname fehlt -->
+        <!-- Fehlermeldung sameUser, wenn Nickname bereits vorhanden -->
         <div class="error-row" *ngIf="sameUser">
             Nickname ist bereits vergeben!
         </div>
