--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
 
         <!--Div für Chat-History-->
         <div class="col-xs-12">
-          <app-chat-history [chatHistory]="messageArray">
+          <app-chat-history>
           <!-- Dies ist die chat-history. In chat-history.component.html bearbeiten -->
           </app-chat-history>
         </div>
