--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
-  
+  <!-- Die App ist unter https://chatnrollbywannacry.herokuapp.com/ verfügbar -->
+
   <div class="container-fluid">
     <div class="row">
 
