--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,6 @@
-<div class="container-fluid" id="font">
+<div class="container-fluid" id="container1">
     
-    <div class="row">
-        <!-- falls eine Anweisung für die Nickname-Eingabe angezeigt werden möchte -->
-        <!-- <div class="col-xs-12" id="anweisung-row">Gib hier deinen Nicknamen ein!</div> -->
+    <div class="row" id="row">
 
         <div class="h-25 d-inline-block">
             <div class="input-group" id="input-row">
@@ -32,4 +30,5 @@
         </div>
           
     </div>
+
 </div>
