aktive Users - Liste (noch nicht fertig)

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,9 +1,9 @@
 <div class="container" id="userbereich">
     <div class="row">Aktive Users:
-        <!-- Liste mit aktiven Users -->
-        <ul id="userList" #scrollMe [scrollTop]="scrollMe.scrollHeight">
-            <!-- For-Schleife iteriert über usersArray und gibt einzelne User aus -->
-            <li class="users" *ngFor="let messages of usersArray">
+        <!-- Liste mit aktiven Usern ausgeben -->
+        <ul id="userList" >
+            <!-- For-Schleife iteriert über activeUsers-Array und gibt einzelne User aus -->
+            <li class="users" *ngFor="let messages of activeUsers">
                 <b>{{messages.nickname}}</b>
             </li>
         </ul>
