--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
 
         <!--Div für Chat-History-->
         <div class="col-xs-12">
-          <app-chat-history>
+          <app-chat-history [nickname]="ownNickname">
           <!-- Dies ist die chat-history. In chat-history.component.html bearbeiten -->
           </app-chat-history>
         </div>
